flapivor/tests/m3/hopix/typechecker/bad/72-anonymous-function-02.hopix
val id : Int -> Int = (fun (x) => 0 : String -> Int)